# SpellChecker

./: .gitignore  README.md  RUST-REACT-TUTORIAL.rar
back-end/: Cargo.toml
back-end/src/: cors.rs  main.rs  spellcheck.rs
front-end/: index.html  package-lock.json  package.json  tailwind.config.js
front-end/src/: App.tsx  index.css  main.tsx
front-end/src/app/: store.ts
front-end/src/components/container/: Container.tsx
front-end/src/components/footer/: Footer.tsx
front-end/src/components/header/: Header.tsx
front-end/src/components/layout/: index.tsx  layout.tsx
front-end/src/helper/: getBestOptions.ts  getSmoothSentence.ts  serverData.ts  wrappedAxios.ts
front-end/src/resources/data/: description.ts
front-end/src/slices/: editboxSlice.ts
front-end/src/views/: 404.tsx
front-end/src/views/editor/: Editor.tsx  index.tsx
front-end/src/views/editor/components/: Description.tsx  EditBox.tsx  ResultPanel.tsx  ServerBadge.tsx
front-end/src/views/landing/: index.tsx
node-back-end/: .env  package-lock.json  package.json
node-back-end/src/: express.js  index.js
node-back-end/src/config/: app.config.js  index.js
node-back-end/src/controllers/: controller.js  index.js
node-back-end/src/helpers/: data.json  getDictionary.js  spellcheck.js
node-back-end/src/routes/: api.route.js  index.js  route.js
