[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
rustc-serialize = "0.3"
rocket = "0.4.10"
rocket_cors = "0.5.1"
serde_json = "1.0.81"
serde = "1.0.137"
serde_derive = "1.0.137"